Increase max memory and permgen size for sbt in hopes that it will complete initial downloads without restarts